Fixed navbar's alignment

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -24,3 +24,9 @@
   position: relative;
   top: 10px;
 }
+
+@media screen and (max-width: 600px) {
+  .smaller-size {
+    width: 212px !important;
+  }
+}
